--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: mindful-meadow
+title: Mindful Meadow
 hero_image: images/banner.png
 description: mindful-meadow description
 version: 4
@@ -7,5 +7,5 @@ copyedit: false
 last_tested: "2020-05-04"
 steps:
   - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Create your meadow
+
