--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,5 +7,11 @@ copyedit: false
 last_tested: "2020-05-04"
 steps:
   - title: Introduction
-  - title: Create your meadow
+  - title: Resize your flower
+  - title: Make more flowers
+  - title: Keeping on the grass
+  - title: Colour and size
+  - title: "Challenge: More sprites or a stary sky"
+    challenge: true
+  - title: What next ?  
 
