--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -5,8 +5,8 @@ description: περιγραφή του γαλήνιου λιβαδιού
 version: 4
 listed: false
 copyedit: false
-last_tested: "2020-05-04"
+last_tested: '2020-05-04'
 steps:
-  - title: Εισαγωγή
-  - title: Δημιούργησε το λιβάδι σου
-
+- title: Εισαγωγή
+  completion: internal
+- title: Δημιούργησε το λιβάδι σου
