--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -5,8 +5,8 @@ description: Blumen-Wiesen Beschreibung
 version: 4
 listed: false
 copyedit: false
-last_tested: "2020-05-04"
+last_tested: '2020-05-04'
 steps:
-  - title: Einleitung
-  - title: Erstelle deine Wiese
-
+- title: Einleitung
+  completion: internal
+- title: Erstelle deine Wiese
