--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -5,8 +5,8 @@ description: weelderige-weide beschrijving
 version: 4
 listed: false
 copyedit: false
-last_tested: "2020-05-04"
+last_tested: '2020-05-04'
 steps:
-  - title: Inleiding
-  - title: Maak je weide
-
+- title: Inleiding
+  completion: internal
+- title: Maak je weide
