--- a/uk-UA/meta.yml
+++ b/uk-UA/meta.yml
@@ -5,8 +5,8 @@ description: опис лугу
 version: 4
 listed: false
 copyedit: false
-last_tested: "2020-05-04"
+last_tested: '2020-05-04'
 steps:
-  - title: Вступ
-  - title: Створи свій луг
-
+- title: Вступ
+  completion: internal
+- title: Створи свій луг
